feat: update curiosities list and improve screenshot handling in script.js
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
   </footer>
 
+  <script>window.INSTANT_SITE_DOMAIN = "cosine";</script>
   <script src="assets/script.js"></script>
 </body>
 </html>
