feat: add call-to-action section with CTA styling
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
   <main class="site-main">
     <div class="wrap">
+      <section class="cta" aria-label="Cosine call-to-action">
+        <p>All of these were built with Cosine. <a class="cta-link" href="https://cosine.sh" target="_blank" rel="noopener noreferrer">Sign up today</a></p>
+      </section>
+
       <section id="grid" class="grid" aria-live="polite"></section>
       <p id="empty" class="empty" hidden>No curiosities yet. Add entries to <code>assets/curiosities.json</code>.</p>
     </div>
