chore: update title and header to 'cosine's curious compendium'
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="light dark" />
-  <title>Curtis's Cabinet of Curiosities</title>
+  <title>cosine's curious compendium</title>
   <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Honk&family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="wrap">
-      <h1 class="brand">Curtis's Cabinet of Curiosities</h1>
+      <h1 class="brand">cosine's curious compendium</h1>
       <button id="themeToggle" class="theme-toggle" aria-label="Toggle color theme" title="Toggle color theme">
         <svg data-icon="sun" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" aria-hidden="true">
           <circle cx="12" cy="12" r="4"></circle>
