--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
+  <div class="bg-synthwave" aria-hidden="true"></div>
   <header class="site-header">
     <div class="wrap">
       <h1 class="brand">cosine's curious compendium</h1>
