feat: add tag filter functionality to curiosities listing
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <p>All of these were built with Cosine. <a class="cta-link" href="https://cosine.sh" target="_blank" rel="noopener noreferrer">Sign up today</a></p>
       </section>
 
+      <section id="filters" class="filters" hidden aria-label="Filter by tags">
+        <div class="chips" role="toolbar" aria-label="Tag filters"></div>
+      </section>
+
       <section id="grid" class="grid" aria-live="polite"></section>
       <p id="empty" class="empty" hidden>No curiosities yet. Add entries to <code>assets/curiosities.json</code>.</p>
     </div>
