--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="color-scheme" content="light dark" />
+  <meta name="color-scheme" content="dark" />
   <title>Cosine's Curious Compendium</title>
   <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&family=Honk&family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="assets/style.css" />
@@ -13,15 +13,6 @@
   <header class="site-header">
     <div class="wrap">
       <h1 class="brand">Cosine's Curious Compendium</h1>
-      <button id="themeToggle" class="theme-toggle" aria-label="Toggle color theme" title="Toggle color theme">
-        <svg data-icon="sun" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" aria-hidden="true">
-          <circle cx="12" cy="12" r="4"></circle>
-          <path d="M12 2v2M12 20v2M4.93 4.93l1.41 1.41M17.66 17.66l1.41 1.41M2 12h2M20 12h2M4.93 19.07l1.41-1.41M17.66 6.34l1.41-1.41"></path>
-        </svg>
-        <svg data-icon="moon" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-          <path d="M21 12.79A9 9 0 0111.21 3c-.46 0-.92.03-1.36.1a8 8 0 108.05 10.45c.08-.44.1-.9.1-1.36z"></path>
-        </svg>
-      </button>
     </div>
   </header>
 
