--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   <header class="site-header">
     <div class="wrap">
       <h1 class="brand">Cosine's Curious Compendium</h1>
+      <button id="themeToggle" class="theme-toggle win98-toggle" aria-label="Toggle Windows 98 theme" title="Toggle Windows 98 theme">
+        <!-- Simple Windows logo: four colored panes -->
+        <svg viewBox="0 0 24 24" aria-hidden="true" class="win-logo">
+          <rect x="2" y="3" width="9" height="8" fill="#F25022"></rect>
+          <rect x="13" y="3" width="9" height="8" fill="#7FBA00"></rect>
+          <rect x="2" y="13" width="9" height="8" fill="#00A4EF"></rect>
+          <rect x="13" y="13" width="9" height="8" fill="#FFB900"></rect>
+        </svg>
+      </button>
     </div>
   </header>
 
