feat: add Geocities theme with unique styling and theme toggle functionality
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
     </div>
   </header>
 
+  <!-- Geocities banner (only visible in Geocities theme) -->
+  <div class="geo-banner" aria-hidden="true">
+    <div class="geo-banner-inner">
+      <span class="geo-badge">Under Construction</span>
+      <span class="geo-badge">Best viewed in Netscape</span>
+      <span class="geo-badge">Sign my Guestbook!</span>
+      <div class="geo-marquee">
+        <span>Welcome to my homepage!!! Thanks for visiting!  Hit refresh for more sparkles!  </span>
+      </div>
+    </div>
+  </div>
+
   <main class="site-main">
     <div class="wrap">
       <section class="cta" aria-label="Cosine call-to-action">
