feat: add dark theme toggle button and update styles in CSS
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       <h1 class="brand">Cosine's Curious Compendium</h1>
       <div class="theme-buttons" role="group" aria-label="Theme selectors">
         <button id="themeDarkBtn" class="theme-toggle dark-toggle" aria-label="Switch to Dark theme" title="Dark theme">
-          <!-- Moon icon -->
+          <!-- Grid pattern icon -->
           <svg viewBox="0 0 24 24" aria-hidden="true" class="icon">
-            <path fill="currentColor" d="M21 12.79A9 9 0 0111.21 3c-.46 0-.92.03-1.36.1a8 8 0 108.05 10.45c.08-.44.1-.9.1-1.36z"></path>
+            <rect x="4" y="4" width="16" height="16" fill="none" stroke="currentColor" stroke-width="1.5"></rect>
+            <path d="M12 4v16M4 12h16" stroke="currentColor" stroke-width="1.5"></path>
+            <path d="M8 4v16M4 8h16M16 4v16M4 16h16" stroke="currentColor" stroke-width="1"></path>
           </svg>
         </button>
         <button id="themeWinBtn" class="theme-toggle win98-toggle" aria-label="Switch to Windows 98 theme" title="Windows 98 theme">
