style: reposition Geocities button and menu, update button title
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </div>
 
   <!-- Geocities launcher -->
-  <button id="geoThemeBtn" class="geo-theme-btn geocities-only" aria-haspopup="true" aria-controls="geoThemeMenu" title="Themez!!!">Themez!!!</button>
+  <button id="geoThemeBtn" class="geo-theme-btn geocities-only" aria-haspopup="true" aria-controls="geoThemeMenu" title="THEMEZ">THEMEZ</button>
   <div id="geoThemeMenu" class="theme-menu geocities-menu" hidden>
     <button type="button" data-theme="dark">Dark</button>
     <button type="button" data-theme="win98">Windows 98</button>
