fix: rename 'dark' theme button to 'Synthwave' in theme menus
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     <span class="hamburger" aria-hidden="true"></span>
   </button>
   <div id="themeMenu" class="theme-menu dark-menu" hidden>
-    <button type="button" data-theme="dark">Dark</button>
+    <button type="button" data-theme="dark">Synthwave</button>
     <button type="button" data-theme="win98">Windows 98</button>
     <button type="button" data-theme="geocities">Geocities</button>
   </div>
 
   <!-- Win98 Start menu -->
   <div id="winStartMenu" class="theme-menu win98-menu" hidden>
-    <button type="button" data-theme="dark">Dark</button>
+    <button type="button" data-theme="dark">Synthwave</button>
     <button type="button" data-theme="win98">Windows 98</button>
     <button type="button" data-theme="geocities">Geocities</button>
   </div>
@@ -77,7 +77,7 @@
   <!-- Geocities launcher -->
   <button id="geoThemeBtn" class="geo-theme-btn geocities-only" aria-haspopup="true" aria-controls="geoThemeMenu" title="THEMEZ">THEMEZ</button>
   <div id="geoThemeMenu" class="theme-menu geocities-menu" hidden>
-    <button type="button" data-theme="dark">Dark</button>
+    <button type="button" data-theme="dark">Synthwave</button>
     <button type="button" data-theme="win98">Windows 98</button>
     <button type="button" data-theme="geocities">Geocities</button>
   </div>
